manifests/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: task2-ns
  labels:
    app: app3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      serviceAccountName: task2-sa
      containers:
        - name: app3
          image: <AWS_ACCOUNT_ID>.dkr.ecr.<region>.amazonaws.com/app3:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 10
