manifests/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    app: app1
spec:
  type: LoadBalancer
  selector:
    app: app1
  ports:
    - name: http
      port: 8081
      targetPort: 8081
