manifests/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: app2
spec:
  type: LoadBalancer
  selector:
    app: app2
  ports:
    - name: http
      port: 8082
      targetPort: 8082
