manifests/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: task2-ns
spec:
  type: LoadBalancer
  selector:
    app: app3
  ports:
    - name: http
      port: 8083
      targetPort: 8083
